Fix Docker compatibility for system info display
- Add usbutils to Dockerfile for lsusb command
- Replace hostnamectl with Docker-compatible fallback in index.php
- Add error handling for CPU temp/freq reading in sys_infos.php
- Add USB bus mount to docker-compose.yml for hardware info
- Add fallback display for Hardware section when USB not available

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - /proc:/host_proc:ro
       # Mount device tree for model info
       - /sys/firmware/devicetree/base:/sys/firmware/devicetree/base:ro
+      # Mount USB bus for lsusb
+      - /dev/bus/usb:/dev/bus/usb:ro
       # Persist database
       - dashboard_data:/var/www/html/data
       # Persist Mosquitto data
