Add system monitor for CPU/RAM Telegram alerts

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -36,6 +36,17 @@ user=www-data
 directory=/var/www/html/backend
 priority=20
 
+[program:system-monitor]
+command=/bin/bash -c "while true; do /usr/local/bin/php /var/www/html/backend/system_monitor.php; sleep 60; done"
+autostart=true
+autorestart=true
+startretries=3
+stderr_logfile=/var/www/html/data/system_monitor_error.log
+stdout_logfile=/var/www/html/data/system_monitor.log
+user=www-data
+directory=/var/www/html/backend
+priority=25
+
 [eventlistener:process_exit]
 command=/bin/bash -c "echo 'Process exited'"
 events=PROCESS_STATE_EXITED
