Fix supervisor config for Apache - use FOREGROUND mode and stdout/stderr logging

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -6,12 +6,15 @@ pidfile=/var/run/supervisord.pid
 loglevel=info
 
 [program:apache2]
-command=/usr/sbin/apache2ctl -D FOREGROUND
+command=/usr/sbin/apachectl -DFOREGROUND
 autostart=true
 autorestart=true
-startretries=3
-stderr_logfile=/var/log/apache2/error.log
-stdout_logfile=/var/log/apache2/access.log
+startretries=5
+startsecs=5
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 priority=10
 
 [program:mosquitto]
@@ -48,5 +51,6 @@ directory=/var/www/html/backend
 priority=25
 
 [eventlistener:process_exit]
-command=/bin/bash -c "echo 'Process exited'"
+command=/bin/bash -c "exit 0"
 events=PROCESS_STATE_EXITED
+autostart=false
